src/main/java/org/example/MyWitcher/pattern/creational/abstractfactory/ex1/bad/ProjectManager.java
package org.example.MyWitcher.pattern.creational.abstractfactory.ex1.bad;

public class ProjectManager {
    public void manageProject() {
        System.out.println("ProjectManager");
    }
}
